syntax = "proto3";

option java_multiple_files = true;
package vn.com.fpt.jobservice.task_service.grpc;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

service TaskService {
  rpc CreateTask(TaskCreateRequest) returns (TaskResponse);
  rpc UpdateTaskByTaskId(TaskUpdateRequestByTaskId) returns (TaskResponse);
  rpc UpdateTaskByTicketIdAndPhaseId(TaskUpdateRequestByTicketIdAndPhaseId) returns (TaskResponse);

  rpc TriggerTaskByTaskId(TaskTriggerRequestByTaskId) returns (TaskTriggerResponse);
  rpc TriggerTaskByTicketIdAndPhaseId(TaskTriggerRequestByTicketIdAndPhaseId) returns (TaskTriggerResponse);

  rpc ReadTaskActiveByTicketIdAndPhaseId(TaskTriggerRequestByTicketIdAndPhaseId) returns (TaskActiveResponse);

  rpc UnscheduleTaskByTicketIdAndPhaseId(UnscheduleTaskRequest) returns (TaskTriggerResponse);
}

message TaskGrpc {
  string id = 1;
  string name = 2;
  int64 taskTypeId = 3;
  repeated google.protobuf.Any taskInputData = 4;
  int64 ticketId = 5;
  int64 phaseId = 6;
  string phaseName = 7;
  int64 subProcessId = 8;
  int64 integrationId = 9;
  string integrationName = 10;
  int32 retryCount = 11;
  int32 maxRetries = 12;
  int32 startStep = 13;
  string cronExpression = 14;
  google.protobuf.Timestamp nextInvocation = 15;
  google.protobuf.Timestamp prevInvocation = 16;
  string jobUUID = 17;
  string status = 18;
  bool active = 19;
  TaskTypeGrpc taskType = 20;
  google.protobuf.Timestamp createdAt = 21;
  google.protobuf.Timestamp modifiedAt = 22;
  string createdBy = 23;
  string modifiedBy = 24;
}

message TaskTypeGrpc {
  int64 id = 1;
  string className = 2;
  string name = 3;
  int64 processId = 4;
  string type = 5;
}

message TaskResponse {
  TaskGrpc task = 1;
}

message TaskCreateRequest {
  TaskGrpc task = 1;
}

message TaskUpdateRequestByTaskId {
  string id = 1;
  TaskGrpc task = 2;
}

message TaskUpdateRequestByTicketIdAndPhaseId {
  int64 ticketId = 1;
  int64 phaseId = 2;
  TaskGrpc task = 3;
}

message TaskTriggerRequestByTaskId {
  string id = 1;
}

message TaskTriggerRequestByTicketIdAndPhaseId {
  int64 ticketId = 1;
  int64 phaseId = 2;
}

message UnscheduleTaskRequest {
  string id = 1;
  int64 ticketId = 2;
  int64 phaseId = 3;
  bool update = 4;
}

message TaskTriggerResponse {
  bool success = 1;
}

message TaskActiveResponse {
  bool active = 1;
}